modal overflow related bug

--- a/assets/sass/layout/_admin.scss
+++ b/assets/sass/layout/_admin.scss
@@ -577,10 +577,11 @@
   }
 }
 // all modal style
-.wpsp-modal-social-platform {
+.autoOverflowModal .wpsp-modal-social-platform {
   max-height: 65vh;
   overflow-y: auto;
-
+}
+.wpsp-modal-social-platform {
   .entry-head {
     color: #fff;
     height: 40px;
